--- a/index.html
+++ b/index.html
@@ -49,28 +49,28 @@
 						<img src="Consolas/XboxConsole.png" alt="">
 						<div class="hover-galeria">
 							<img src="consolas/click.png" alt="">
-							<p><a href='paginas/Historia.html'>Historia</a></p>
+							<p><a href='Historia.html'>Historia</a></p>
 						</div>
 					</div>
 					<div class="imagen-port">
 						<img src="consolas/odyssey.png" alt="">
 						<div class="hover-galeria">
 							<img src="consolas/click.png" alt="">
-							<p><a href='paginas/Generalidades.html'>Generalidades</a></p>
+							<p><a href='Generalidades.html'>Generalidades</a></p>
 						</div>
 					</div>
 					<div class="imagen-port">
 						<img src="consolas/atari.png" alt="">
 						<div class="hover-galeria">
 							<img src="consolas/click.png" alt="">
-							<p><a href='paginas/Industria.html'>Industria</a></p>
+							<p><a href='Industria.html'>Industria</a></p>
 						</div>
 					</div>
 					<div class="imagen-port">
 						<img src="consolas/SystemSega.png" alt="">
 						<div class="hover-galeria">
 							<img src="consolas/click.png" alt="">
-							<p><a href='paginas/Listado.html'>Listado De VideoJuegos</a></p>
+							<p><a href='Listado.html'>Listado De VideoJuegos</a></p>
 						</div>
 					</div>
 				</div>
