Update and rename index.html to índice.html

--- a/índice.html
+++ b/índice.html
@@ -46,7 +46,7 @@
 				<h2 class="titulo">¿Que Deseas Averguar Sobre Este Tema?</h2>
 				<div class="galeria-port">
 					<div class="imagen-port">
-						<img src="Consolas/XboxConsole.png" alt="">
+						<img src="consolas/XboxConsole.png" alt="">
 						<div class="hover-galeria">
 							<img src="consolas/click.png" alt="">
 							<p><a href='Historia.html'>Historia</a></p>
