--- a/Listado.html
+++ b/Listado.html
@@ -18,215 +18,23 @@
         </script>
         <header>
             <nav>
-                <a href="IBLOG/index.html">Inicio</a>
+                <a href="index.html">Inicio</a>
             </nav>
             <section class="textos-header">
                 <h1>Los VideoJuegos</h1>
-                <h2>Lista De Diversos Juegos</h2>
+                <h2>Test y Juego Sobre El Tema</h2>
             </section>
             <div class="wave" style="height: 150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 517.21,61.67 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: rgb(255, 255, 255);"></path></svg></div>
         </header>
         <main>
-            <section class="contenedor lista">
-                <h2 class="titulo">Listado</h2>
-                <p>Una Lista amplia de una gran cantidad de videojuegos tanto indies como triple A (AAA), puedes hacer click en el que mas te llame la atencion para acceder a su wiki.</p><br><br>
-                    <div class="contenido-lis">
-                        <section class="portafolio">
-                            <div class="contenedor">
-                                <div class="galeria-port">
-                                    <div class="imagen-port">
-                                        <img src="listado/GTA_V.jpg" alt="">
-                                        <div class="hover-galeria">
-                                            <img src="consolas/click.png" alt="">
-                                            <p><a href='https://es.wikipedia.org/wiki/Grand_Theft_Auto_V'>GTA V</a></p>
-                                        </div>galeria
-                                    </div>
-                                    <div class="imagen-port">
-                                        <img src="listado/fortnite.png" alt="">
-                                        <div class="hover-galeria">
-                                            <img src="consolas/click.png" alt="">
-                                            <p><a href='https://es.wikipedia.org/wiki/Fortnite'>Fortnite</a></p>
-                                        </div>galeria
-                                    </div>
-                                    <div class="imagen-port">
-                                        <img src="games/crashPAAA.jpg" alt="">
-                                        <div class="hover-galeria">
-                                            <img src="consolas/click.png" alt="">
-                                            <p><a href='https://es.wikipedia.org/wiki/Crash_Team_Racing_Nitro-Fueled'>CTR Nitro Fueled</a></p>
-                                        </div>galeria
-                                    </div>
-                                    <div class="imagen-port">
-                                        <img src="listado/terraria.jpg" alt="">
-                                        <div class="hover-galeria">
-                                            <img src="consolas/click.png" alt="">
-                                            <p><a href='https://es.wikipedia.org/wiki/Terraria'>Terraria</a></p>
-                                        </div>galeria
-                                    </div>
-                                    <div class="imagen-port">
-                                        <img src="listado/cuphed.jpg" alt="">
-                                        <div class="hover-galeria">
-                                            <img src="consolas/click.png" alt="">
-                                            <p><a href='https://es.wikipedia.org/wiki/Cuphead'>Cuphead</a></p>
-                                        </div>galeria
-                                    </div>
-                                    <div class="imagen-port">
-                                        <img src="listado/estrategiafacha.jpg" alt="">
-                                        <div class="hover-galeria">
-                                            <img src="consolas/click.png" alt="">
-                                            <p><a href='https://es.wikipedia.org/wiki/Clash_Royale'>Clash Royale</a></p>
-                                        </div>galeria
-                                    </div>
-                                    <div class="imagen-port">
-                                        <img src="listado/vaquero.jpg" alt="">
-                                        <div class="hover-galeria">
-                                            <img src="consolas/click.png" alt="">
-                                            <p><a href='https://es.wikipedia.org/wiki/Red_Dead_Redemption_2'>Red Dead Redemption 2</a></p>
-                                        </div>galeria
-                                    </div>
-                                    <div class="imagen-port">
-                                        <img src="listado/lostfust.jpeg" alt="">
-                                        <div class="hover-galeria">
-                                            <img src="consolas/click.png" alt="">
-                                            <p><a href='https://es.wikipedia.org/wiki/The_Last_of_Us'>The Last Of Us</a></p>
-                                        </div>galeria
-                                    </div>
-                                    <div class="imagen-port">
-                                        <img src="listado/undertale.jpg" alt="">
-                                        <div class="hover-galeria">
-                                            <img src="consolas/click.png" alt="">
-                                            <p><a href='https://es.wikipedia.org/wiki/Undertale'>Undertale</a></p>
-                                        </div>galeria
-                                    </div>
-                                    <div class="imagen-port">
-                                        <img src="listado/maincra+.jpg" alt="">
-                                        <div class="hover-galeria">
-                                            <img src="consolas/click.png" alt="">
-                                            <p><a href='https://es.wikipedia.org/wiki/Minecraft'>Minecraft</a></p>
-                                        </div>galeria
-                                    </div>
-                                    <div class="imagen-port">
-                                        <img src="listado/CJ.png" alt="">
-                                        <div class="hover-galeria">
-                                            <img src="consolas/click.png" alt="">
-                                            <p><a href='https://es.wikipedia.org/wiki/Grand_Theft_Auto:_San_Andreas'>GTA San Andreas</a></p>
-                                        </div>galeria
-                                    </div>
-                                    <div class="imagen-port">
-                                        <img src="listado/rol.jpg" alt="">
-                                        <div class="hover-galeria">
-                                            <img src="consolas/click.png" alt="">
-                                            <p><a href='https://es.wikipedia.org/wiki/Genshin_Impact'>Genshin Impact</a></p>
-                                        </div>galeria
-                                    </div>
-                                    <div class="imagen-port">
-                                        <img src="listado/GodOfWar.jpg" alt="">
-                                        <div class="hover-galeria">
-                                            <img src="consolas/click.png" alt="">
-                                            <p><a href='https://es.wikipedia.org/wiki/God_of_War_(serie)'>God Of War</a></p>
-                                        </div>galeria
-                                    </div>
-                                    <div class="imagen-port">
-                                        <img src="listado/hollow.jpg" alt="">
-                                        <div class="hover-galeria">
-                                            <img src="consolas/click.png" alt="">
-                                            <p><a href='https://es.wikipedia.org/wiki/Hollow_Knight'>Hollow Knight</a></p>
-                                        </div>galeria
-                                    </div>
-                                    <div class="imagen-port">
-                                        <img src="listado/hotline.jpg" alt="">
-                                        <div class="hover-galeria">
-                                            <img src="consolas/click.png" alt="">
-                                            <p><a href='https://es.wikipedia.org/wiki/Hotline_Miami'>Hotline Miami</a></p>
-                                        </div>galeria
-                                    </div>
-                                    <div class="imagen-port">
-                                        <img src="listado/isaac.jpg" alt="">
-                                        <div class="hover-galeria">
-                                            <img src="consolas/click.png" alt="">
-                                            <p><a href='https://es.wikipedia.org/wiki/The_Binding_of_Isaac'>The Binding Of Isaac</a></p>
-                                        </div>galeria
-                                    </div>
-                                    <div class="imagen-port">
-                                        <img src="listado/halo.jpg" alt="">
-                                        <div class="hover-galeria">
-                                            <img src="consolas/click.png" alt="">
-                                            <p><a href='https://es.wikipedia.org/wiki/Halo_(franquicia)'>Halo</a></p>
-                                        </div>galeria
-                                    </div>
-                                    <div class="imagen-port">
-                                        <img src="listado/monster.jpg" alt="">
-                                        <div class="hover-galeria">
-                                            <img src="consolas/click.png" alt="">
-                                            <p><a href='https://es.wikipedia.org/wiki/Monster_Hunter:_World'>Monster Hunter World</a></p>
-                                        </div>galeria
-                                    </div>
-                                    <div class="imagen-port">
-                                        <img src="games/SUS.webp" alt="">
-                                        <div class="hover-galeria">
-                                            <img src="consolas/click.png" alt="">
-                                            <p><a href='https://es.wikipedia.org/wiki/Among_Us'>Among Us</a></p>
-                                        </div>galeria
-                                    </div>
-                                    <div class="imagen-port">
-                                        <img src="games/friday-night-funkin-nawpic.png" alt="">
-                                        <div class="hover-galeria">
-                                            <img src="consolas/click.png" alt="">
-                                            <p><a href='https://es.wikipedia.org/wiki/Friday_Night_Funkin%27'>Friday Night Funkin</a></p>
-                                        </div>galeria
-                                    </div>
-                                    <div class="imagen-port">
-                                        <img src="listado/milesmorales.jpg" alt="">
-                                        <div class="hover-galeria">
-                                            <img src="consolas/click.png" alt="">
-                                            <p><a href='https://es.wikipedia.org/wiki/Spider-Man:_Miles_Morales'>Spider-Man Miles Morales</a></p>
-                                        </div>galeria
-                                    </div>
-                                    <div class="imagen-port">
-                                        <img src="listado/LOLSITO.jpg" alt="">
-                                        <div class="hover-galeria">
-                                            <img src="consolas/click.png" alt="">
-                                            <p><a href='https://es.wikipedia.org/wiki/League_of_Legends'>League Of Legends</a></p>
-                                        </div>galeria
-                                    </div>
-                                    <div class="imagen-port">
-                                        <img src="listado/smash.jpg" alt="">
-                                        <div class="hover-galeria">
-                                            <img src="consolas/click.png" alt="">
-                                            <p><a href='https://es.wikipedia.org/wiki/Super_Smash_Bros._Ultimate'>Super Smash Bros Ultimate</a></p>
-                                        </div>galeria
-                                    </div>
-                                    <div class="imagen-port">
-                                        <img src="listado/watch-dogs-legion.jpg" alt="">
-                                        <div class="hover-galeria">
-                                            <img src="consolas/click.png" alt="">
-                                            <p><a href='https://en.wikipedia.org/wiki/Watch_Dogs'>Watch Dogs Legion</a></p>
-                                        </div>galeria
-                                    </div>
-                                    <div class="imagen-port">
-                                        <img src="listado/mario.jpg" alt="">
-                                        <div class="hover-galeria">
-                                            <img src="consolas/click.png" alt="">
-                                            <p><a href='https://es.wikipedia.org/wiki/Super_Mario_Odyssey'>Super Mario Odyssey</a></p>
-                                        </div>galeria
-                                    </div>
-                                    <div class="imagen-port">
-                                        <img src="games/aventura.jpg" alt="">
-                                        <div class="hover-galeria">
-                                            <img src="consolas/click.png" alt="">
-                                            <p><a href='https://es.wikipedia.org/wiki/The_Legend_of_Zelda:_Breath_of_the_Wild'>The Legend Of Zelda</a></p>
-                                        </div>galeria
-                                    </div>
-                                    <div class="imagen-port">
-                                        <img src="listado/crashito.jpg" alt="">
-                                        <div class="hover-galeria">
-                                            <img src="consolas/click.png" alt="">
-                                            <p><a href='https://es.wikipedia.org/wiki/Crash_Bandicoot_4:_It%27s_About_Time'>Crash Bandicoot 4</a></p>
-                                        </div>galeria
-                                    </div>
-                                </div>
-                            </div>
-                        </section><br>
-                    </div>
+            <section class="contenedor listado">
+                <h2 class="titulo">Pon A Prueba Lo Aprendido</h2>
+                <div class="contenido-lis">
+                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfA4wjobJfw5yFFowAclH1GnmE1oM18ha2iKcQs-dFwb_aekA/viewform?embedded=true" width="100%" height="4939" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe> <br><br>
+
+                    <iframe width="100%" height="690" frameborder="0" src="https://es.educaplay.com/juego/9651964-sopa_de_letras_videojuegos.html"></iframe>
+                </div>
+            </section>
         </main>
         <footer>
             <div class="contenedor-footer">
@@ -235,7 +43,49 @@
                     <p>Steam</p>
                 </div>
             </div>
-            <h2 class="titulo-final">Blog Elaborado Por | Team4/4</h2>
+            <h2 class="titulo-final">Blog Elaborado Por | Team4/4</h2><br>
+            <center><a href="http://www.websmultimedia.com/contador-de-visitas-gratis" title="Contador De Visitas Gratis">
+                <img style="border: 0px solid; display: inline;" alt="contador de visitas" src="http://www.websmultimedia.com/contador-de-visitas.php?id=299627"></a></center><br><br>
+                <section>
+                    <div class="vistos contenedor">
+                        <h2 class="titulo">Blog Hecho Por</h2>
+                        <div class="cards">
+                            <div class="card">
+                            <img src="Foto_Yotas.jpeg" alt="">
+                            <div class="contenido-texto-card">
+                                <h3>Juan Pablo Barragán Bueno</h3>
+                            </div>
+                            </div>
+                        </div>
+                        <br><br>
+                        <div class="cards">
+                            <div class="card">
+                            <img src="Foto_Jess.jpeg" alt="">
+                            <div class="contenido-texto-card">
+                                <h3>Jessica Alejandra Paez Moreno</h3>
+                            </div>
+                            </div>
+                        </div>
+                        <br><br>
+                        <div class="cards">
+                            <div class="card">
+                            <img src="Foto_Ingrid.jpeg" alt="">
+                            <div class="contenido-texto-card">
+                                <h3>Ingrid Liseth Velasquez Garzon</h3>
+                            </div>
+                            </div>
+                        </div>
+                        <br><br>
+                        <div class="cards">
+                            <div class="card">
+                            <img src="Foto_Licenciado.jpg" alt="">
+                            <div class="contenido-texto-card">
+                                <h3>Nicolas Cortes Valderrama</h3>
+                            </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
         </footer>
 </body>
 </html>
